# myalgorithm

./: Makefile  README.md  cv_image.cpp  cv_image.h  main.cpp  testcv.cpp  testcv.h
face/: audioanalysis.cpp  cvtest  fingerprint_alg.cpp  fingerprint_alg.h  log5cxx.h  makefile  mycurl.cpp  mycurl.h  shotdetect.cpp  shotdetect_alg.cpp  shotdetect_alg.h  types.cpp
facedetect/fromcamera/: Makefile  main.cpp
facedetect/fromfile/: Makefile  main.cpp
feature/: Makefile  avreader.cpp  avreader.h  feature.cpp  feature.h  main.cpp
ffclip/: FFClips.cpp  FFClips.h  FFKeyFrameClips.cpp  Makefile  Readme.txt
ffmpeg-bugfix/libavfilter/: vf_libvmaf.c
movedetect/: Makefile  main.cpp
ocr/: CMakeCache.txt  CMakeLists.txt  audioanalysis2.cpp  build.sh  cmake_install.cmake  facedetect.cpp  ffmpeg_videocapture.c  fingerprint.cpp  imchar  log5cxx.cpp  main.cpp  makefile  shotdetect.cpp  shotdetect_alg.cpp  shotdetect_alg.h  types.h
skindetect/: Makefile  main.cpp
voice/: convert.cpp  convert.h  main.cpp  makefile
